--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <jjwt.version>0.9.0</jjwt.version>
         <hibernate.version>5.2.12.Final</hibernate.version>
         <hibernate.validator.version>6.0.6.Final</hibernate.validator.version>
-        <postgresql.connector.version>42.1.4</postgresql.connector.version>
+        <postgresql.connector.version>42.2.5</postgresql.connector.version>
         <servlet-api.version>3.0.1</servlet-api.version>
         <jackson.version>2.9.3</jackson.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -185,12 +185,6 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.connector.version}</version>
-        </dependency>
-
-	<dependency>
-    	    <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.2.5</version>
         </dependency>
 
         <!--Servlet API-->
@@ -519,15 +513,6 @@
 	                </annotationProcessorPaths>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
@@ -584,7 +569,7 @@
         <repository>
             <id>org.springframework.maven.milestone</id>
             <name>Spring Maven Milestone Repository</name>
-            <url>http://repo.spring.io/milestone</url>
+            <url>https://repo.spring.io/milestone</url>
         </repository>
         <repository>
             <id>public</id>
@@ -613,9 +598,10 @@
         <repository>
             <id>spring-milestone</id>
             <name>Spring Maven MILESTONE Repository</name>
-            <url>http://repo.spring.io/libs-milestone</url>
+            <url>https://repo.spring.io/libs-milestone</url>
         </repository>
 </repositories>
+<!--
 <distributionManagement>
     <repository>
       <id>nexus</id>
@@ -628,4 +614,5 @@
       <url>http://35.188.29.52:8081/repository/maven-snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+-->
 </project>
