--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ front.url=http://localhost:8080/citizen/#
 front-end.url=http://localhost:8080/citizen/
 #db
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/ss_demo_1
+db.url=jdbc:postgresql://localhost:5432/ss_citizen
 db.username=postgres
 db.password=postgres
 #hibernate
@@ -12,28 +12,28 @@ hibernate.show_sql=true
 entity_manager.packages.to.scan=com.softserveinc.geocitizen.entity
 #liquibase
 driver=org.postgresql.Driver
-url=jdbc:postgresql://35.204.28.238:5432/ss_demo_1
+url=jdbc:postgresql://localhost:5432/ss_citizen
 username=postgres
 password=postgres
 changeLogFile=src/main/resources/liquibase/mainChangeLog.xml
 verbose=true
 dropFirst=false
 outputChangeLogFile=src/main/resources/liquibase/changeLog-NEW.postgresql.sql
-referenceUrl=jdbc:postgresql://35.204.28.238:5432/ss_demo_1_test
+referenceUrl=jdbc:postgresql://localhost:5432/ss_demo_1_test
 diffChangeLogFile=src/main/resources/liquibase/diffChangeLog.yaml
 referenceUsername=${db.username}
 referencePassword=${db.password}
 spring.liquibase.change-log=src/main/resources/liquibase/structure.yaml
 #smtp
-mail.smtps.host=smtp.gmail.com
-mail.smtp.socketFactory.class=SSL_FACTORY
+mail.smtps.host=smtp.ukr.net
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.socketFactory.fallback=false
 mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 mail.smtps.auth=true
 mail.smtps.quitwait=false
-email.username=ssgeocitizen@gmail.com
-email.password=softserve
+email.username=chekmasovamasha@ukr.net
+email.password=
 #google maps
 map.key=AIzaSyAHfXMw7b7POrZw9tGblzHBdFvQG9AX5oE
 #fb
