--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ front.url=http://localhost:8080/citizen/#
 front-end.url=http://localhost:8080/citizen/
 #db
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/ss_citizen
-db.username=postgres
-db.password=postgres
+db.url=jdbc:postgresql://localhostbase:5432/ss_citizen
+db.username=postusername
+db.password=postpassword
 #hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 hibernate.show_sql=true
@@ -33,7 +33,7 @@ mail.smtp.socketFactory.port=465
 mail.smtps.auth=true
 mail.smtps.quitwait=false
 email.username=chekmasovamasha@ukr.net
-email.password=
+email.password=passwordemail
 #google maps
 map.key=AIzaSyAHfXMw7b7POrZw9tGblzHBdFvQG9AX5oE
 #fb
