--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ front.url=http://localhost:8080/citizen/#
 front-end.url=http://localhost:8080/citizen/
 #db
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhostbase:5432/ss_citizen
+db.url=jdbc:postgresql://localhost:5432/ss_citizen
 db.username=postusername
 db.password=postpassword
 #hibernate
