--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -39,18 +39,11 @@
       group: www-data
 
   - name: sed commands for Tomcat
-    shell: "sed -i '56 i <!-- user manager can access only manager section -->\n<role rolename="manager-gui" />\n<user username="manager" password="manager" roles="manager-gui" />\n\n<!-- user admin can access manager and admin section both -->\n<role rolename="admin-gui" />\n<user username="admin" password="admin" roles="manager-gui,admin-gui" />' /opt/tomcat/conf/tomcat-users.xml"
-    shell: "sed -i '21 i <!--' /opt/tomcat/webapps/manager/META-INF/context.xml"
-    shell: "sed -i '24 i -->' /opt/tomcat/webapps/manager/META-INF/context.xml"
-    shell: "sed -i '21 i <!--' /opt/tomcat/webapps/host-manager/META-INF/context.xml"
-    shell: "sed -i '24 i -->' /opt/tomcat/webapps/host-manager/META-INF/context.xml"
-
-  - name: Clone a github repository
-    git:
-      repo: https://github.com/Chmokachka/Geocit134.git
-      dest: /
-      clone: yes
-      update: yes
+    shell: sed -i '56 i <!-- user manager can access only manager section -->\n<role rolename="manager-gui" />\n<user username="manager" password="manager" roles="manager-gui" />\n\n<!-- user admin can access manager and admin section both -->\n<role rolename="admin-gui" />\n<user username="admin" password="admin" roles="manager-gui,admin-gui" />' /opt/tomcat/apache-tomcat-8.5.79/conf/tomcat-users.xml
+    shell: "sed -i '21 i <!--' /opt/tomcat/apache-tomcat-8.5.79/webapps/manager/META-INF/context.xml"
+    shell: "sed -i '24 i -->' /opt/tomcat/apache-tomcat-8.5.79/webapps/manager/META-INF/context.xml"
+    shell: "sed -i '21 i <!--' /opt/tomcat/apache-tomcat-8.5.79/webapps/host-manager/META-INF/context.xml"
+    shell: "sed -i '24 i -->' /opt/tomcat/apache-tomcat-8.5.79/webapps/host-manager/META-INF/context.xml"
 
   - name: mv file
     command: mv /Geocit134/tomcat.service /etc/systemd/system
@@ -62,7 +55,7 @@
       name: tomcat
       enabled: yes
 
-  - name: sed commands for project 
+  - name: sed commands for project
     shell: "sed -i 's/postusername/${DB_USER}/g' /Geocit134/src/main/resources/application.properties"
     shell: "sed -i 's/postpassword/${DB_PASS}/g' /Geocit134/src/main/resources/application.properties"
     shell: "sed -i 's/localhost:5432/${DB_URL}:5432/g' /Geocit134/src/main/resources/application.properties"
@@ -72,7 +65,7 @@
     shell: "cd /Geocit134 && mvn clean install"
 
   - name: mv war
-    command: mv /Geocit134/target/citizen.war /opt/tomcat/webapps/
+    command: mv /Geocit134/target/citizen.war /opt/tomcat/apache-tomcat-8.5.79/webapps/
 
   - name: start Tomcat
-    shell: "/opt/tomcat/bin/startup.sh"
+    shell: "/opt/tomcat/apache-tomcat-8.5.79/bin/startup.sh"
