--- a/tomcat.service
+++ b/tomcat.service
@@ -10,12 +10,13 @@ Group=root
 
 Environment="JAVA_HOME=/usr/lib/jvm/java-1.11.0-openjdk-amd64"
 Environment="JAVA_OPTS=-Djava.security.egd=file:///dev/urandom"
-Environment="CATALINA_BASE=/opt/tomcat"\nEnvironment="CATALINA_HOME=/opt/tomcat"
-Environment="CATALINA_PID=/opt/tomcat/temp/tomcat.pid"
+Environment="CATALINA_BASE=/opt/tomcat/apache-tomcat-8.5.79"
+Environment="CATALINA_HOME=/opt/tomcat/apache-tomcat-8.5.79"
+Environment="CATALINA_PID=/opt/tomcat/apache-tomcat-8.5.79/temp/tomcat.pid"
 Environment="CATALINA_OPTS=-Xms512M -Xmx1024M -server -XX:+UseParallelGC"
 
-ExecStart=/opt/tomcat/bin/startup.sh
-ExecStop=/opt/tomcat/bin/shutdown.sh
+ExecStart=/opt/tomcat/apache-tomcat-8.5.79/bin/startup.sh
+ExecStop=/opt/tomcat/apache-tomcat-8.5.79/bin/shutdown.sh
 
 [Install]
 WantedBy=multi-user.target
