--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -38,12 +38,26 @@
       owner: www-data
       group: www-data
 
-  - name: sed commands for Tomcat
-    shell: sed -i "56 i <\!-- user manager can access only manager section -->\n<role rolename="manager-gui" />\n<user username="manager" password="manager" roles="manager-gui" />\n\n<\!-- user admin can access manager and admin section both -->\n<role rolename="admin-gui" />\n<user username="admin" password="admin" roles="manager-gui,admin-gui" />" /opt/tomcat/apache-tomcat-8.5.79/conf/tomcat-users.xml
-    shell: sed -i "21 i <\!--" /opt/tomcat/apache-tomcat-8.5.79/webapps/manager/META-INF/context.xml
-    shell: sed -i "24 i -->" /opt/tomcat/apache-tomcat-8.5.79/webapps/manager/META-INF/context.xml
-    shell: sed -i "21 i <\!--" /opt/tomcat/apache-tomcat-8.5.79/webapps/host-manager/META-INF/context.xml
-    shell: sed -i "24 i -->" /opt/tomcat/apache-tomcat-8.5.79/webapps/host-manager/META-INF/context.xml
+  - name: add users
+    lineinfile:
+      dest: /opt/tomcat/apache-tomcat-8.5.79/conf/tomcat-users.xml
+      line: '<!-- user manager can access only manager section --><role rolename="manager-gui" /><user username="manager" password="manager" roles="manager-gui" /><!-- user admin can access manager and admin section both --><role rolename="admin-gui" /><user username="admin" password="admin" roles="manager-gui,admin-gui" /></tomcat-users>'
+      regexp: '^</tomcat-users>$'
+      state: present
+
+  - name: comment in manager
+    lineinfile:
+      dest: /opt/tomcat/apache-tomcat-8.5.79/webapps/manager/META-INF/context.xml
+      line: '<!-- <Valve className="org.apache.catalina.valves.RemoteAddrValve" allow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" /> -->'
+      regexp: '^<Valve className="org.apache.catalina.valves.RemoteAddrValve"\nallow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" />$'
+      state: present
+
+  - name: comment in host-manager
+    lineinfile:
+      dest: /opt/tomcat/apache-tomcat-8.5.79/webapps/host-manager/META-INF/context.xml
+      line: '<!-- <Valve className="org.apache.catalina.valves.RemoteAddrValve" allow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" /> -->'
+      regexp: '^<Valve className="org.apache.catalina.valves.RemoteAddrValve"\nallow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" />$'
+      state: present
 
   - name: mv file
     command: mv /Geocit134/tomcat.service /etc/systemd/system
@@ -55,12 +69,34 @@
       name: tomcat
       enabled: yes
 
-  - name: sed commands for project
-    shell: "sed -i 's/postusername/${DB_USER}/g' /Geocit134/src/main/resources/application.properties"
-    shell: "sed -i 's/postpassword/${DB_PASS}/g' /Geocit134/src/main/resources/application.properties"
-    shell: "sed -i 's/localhost:5432/${DB_URL}:5432/g' /Geocit134/src/main/resources/application.properties"
-    shell: "sed -i 's/passwordemail/${EMAIL_PASS}/g' /Geocit134/src/main/resources/application.properties"
+  - name: change postgres username
+    lineinfile:
+      dest: /Geocit134/src/main/resources/application.properties
+      line: "${DB_USER}"
+      regexp: "^postusername$"
+      state: present
 
+  - name: change postgres password
+    lineinfile:
+      dest: /Geocit134/src/main/resources/application.properties
+      line: "${DB_PASS}"
+      regexp: "^postpassword$"
+      state: present
+
+  - name: change db url
+    lineinfile:
+      dest: /Geocit134/src/main/resources/application.properties
+      line: "${DB_URL}"
+      regexp: "^localhost:5432$"
+      state: present
+
+  - name: change email password
+    lineinfile:
+      dest: /Geocit134/src/main/resources/application.properties
+      line: "${EMAIL_PASS}"
+      regexp: "^passwordemail$"
+      state: present
+      
   - name: build
     shell: "cd /Geocit134 && mvn clean install"
 
