--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -26,6 +26,13 @@
   - name: tomcat
     shell: "wget https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.79/bin/apache-tomcat-8.5.79.tar.gz && tar xzvf apache-tomcat-8.5.79.tar.gz && mv apache-tomcat-8.5.79/* /opt/tomcat/ && chown -R www-data:www-data /opt/tomcat/ && chmod -R 755 /opt/tomcat/"
 
+  - name: add users
+    lineinfile:
+      dest: /opt/tomcat/conf/tomcat-users.xml
+      line: '<!-- user manager can access only manager section --><role rolename="manager-gui" /><user username="manager" password="manager" roles="manager-gui" /><!-- user admin can access manager and admin section both --><role rolename="admin-gui" /><user username="admin" password="admin" roles="manager-gui,admin-gui" /></tomcat-users>'
+      regexp: '^</tomcat-users>$'
+      state: present
+
   - name: comment in manager
     lineinfile:
       dest: /opt/tomcat/webapps/manager/META-INF/context.xml
