--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -13,6 +13,7 @@ pipeline {
                      export AWS_ACCESS_KEY_ID="\$access_key"; \
                      export AWS_SECRET_ACCESS_KEY="\$secret_key"; \
                      export AWS_DEFAULT_REGION="eu-north-1"; \
+                     terraform init; \
                      terraform apply --auto-approve
                      """
                     }
