--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         stage('Take public IP') {
             steps {
                 script{
-                  withCredentials([string(credentialsId: 'access_key', variable: 'access_key'), string(credentialsId: 'secret_key', variable: 'secret_key'), string(credentialsId: 'postgres_user_pass', usernameVariable: 'db_username', passwordVariable: 'db_password'), string(credentialsId: 'email_password', variable: 'email_password')]) {
+                  withCredentials([string(credentialsId: 'access_key', variable: 'access_key'), string(credentialsId: 'secret_key', variable: 'secret_key'), string(credentialsId: 'postgres_user_pass', variable: 'postgres_user_pass'), string(credentialsId: 'email_password', variable: 'email_password')]) {
                      sh """
                      aws ec2 describe-addresses --query Addresses[0].PublicIp > publicip1.txt; \
                      aws ec2 describe-addresses --query Addresses[1].PublicIp > publicip2.txt; \
@@ -31,13 +31,14 @@ pipeline {
                      export PUBLIC_IP1=\$(cut -d '"' -f 2 publicip1.txt); \
                      export PUBLIC_IP2=\$(cut -d '"' -f 2 publicip2.txt); \
                      export DB_URL=\$(cut -d '"' -f 2 output.txt); \
-                     sed -i 's/postusername/\${db_username}/g' /var/jenkins_home/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/postpassword/\${db_password}/g' /var/jenkins_home/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/localhost:5432/\${DB_URL}:5432/g' /var/jenkins_home/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/passwordemail/\${email_password}/g' /var/jenkins_home/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/server1/\${PUBLIC_IP1}/g' /var/jenkins_home/workspace/Geocit/ansible/hosts.txt; \
-                     sed -i 's/server2/\${PUBLIC_IP2}/g' /var/jenkins_home/workspace/Geocit/ansible/hosts.txt; \
-                     cat /var/jenkins_home/workspace/Geocit/ansible/hosts.txt;
+                     sed -i 's/postusername/\${postgres_user_pass}/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/postpassword/\${postgres_user_pass}/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/localhost:5432/\${DB_URL}:5432/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/passwordemail/\${email_password}/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/server1/\${PUBLIC_IP1}/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
+                     sed -i 's/server2/\${PUBLIC_IP2}/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
+                     cat /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
+                     terraform destroy --auto-approve
                      """
                     }
                 }
