--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -25,6 +25,9 @@ pipeline {
                 script{
                   withCredentials([string(credentialsId: 'access_key', variable: 'access_key'), string(credentialsId: 'secret_key', variable: 'secret_key'), string(credentialsId: 'postgres_user_pass', variable: 'postgres_user_pass'), string(credentialsId: 'email_password', variable: 'email_password')]) {
                      sh """
+                     export AWS_ACCESS_KEY_ID="\$access_key"; \
+                     export AWS_SECRET_ACCESS_KEY="\$secret_key"; \
+                     export AWS_DEFAULT_REGION="eu-north-1"; \
                      aws ec2 describe-addresses --query Addresses[0].PublicIp > publicip1.txt; \
                      aws ec2 describe-addresses --query Addresses[1].PublicIp > publicip2.txt; \
                      aws rds describe-db-instances --query DBInstances[0].Endpoint.Address > output.txt; \
@@ -38,6 +41,7 @@ pipeline {
                      sed -i 's/server1/\${PUBLIC_IP1}/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
                      sed -i 's/server2/\${PUBLIC_IP2}/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
                      cat /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
+                     cat /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
                      terraform destroy --auto-approve
                      """
                     }
