--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -23,10 +23,10 @@ pipeline {
         stage('Take public IP') {
             steps {
                 script{
-                  withCredentials([string(credentialsId: 'access_key', variable: 'access_key'), string(credentialsId: 'secret_key', variable: 'secret_key'), string(credentialsId: 'postgres_user_pass', variable: 'postgres_user_pass'), string(credentialsId: 'email_password', variable: 'email_password')]) {
+                  withCredentials([string(credentialsId: 'access_key', variable: 'ACCESS_KEY'), string(credentialsId: 'secret_key', variable: 'SECRET_KEY'), string(credentialsId: 'postgres_user_pass', variable: 'POSTGRES_USER_PASS'), string(credentialsId: 'email_password', variable: 'EMAIL_PASSWORD')]) {
                      sh """
-                     export AWS_ACCESS_KEY_ID="\$access_key"; \
-                     export AWS_SECRET_ACCESS_KEY="\$secret_key"; \
+                     export AWS_ACCESS_KEY_ID="\$ACCESS_KEY"; \
+                     export AWS_SECRET_ACCESS_KEY="\$SECRET_KEY"; \
                      export AWS_DEFAULT_REGION="eu-north-1"; \
                      aws ec2 describe-addresses --query Addresses[0].PublicIp > publicip1.txt; \
                      aws ec2 describe-addresses --query Addresses[1].PublicIp > publicip2.txt; \
@@ -34,12 +34,12 @@ pipeline {
                      export PUBLIC_IP1=\$(cut -d '"' -f 2 publicip1.txt); \
                      export PUBLIC_IP2=\$(cut -d '"' -f 2 publicip2.txt); \
                      export DB_URL=\$(cut -d '"' -f 2 output.txt); \
-                     sed -i 's/postusername/\${postgres_user_pass}/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/postpassword/\${postgres_user_pass}/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/localhost:5432/\${DB_URL}:5432/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/passwordemail/\${email_password}/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
-                     sed -i 's/server1/\${PUBLIC_IP1}/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
-                     sed -i 's/server2/\${PUBLIC_IP2}/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
+                     sed -i 's/postusername/\$POSTGRES_USER_PASS/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/postpassword/\$POSTGRES_USER_PASS/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/localhost:5432/\$DB_URL:5432/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/passwordemail/\$EMAIL_PASSWORD/g' /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
+                     sed -i 's/server1/\$PUBLIC_IP1/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
+                     sed -i 's/server2/\$PUBLIC_IP2/g' /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
                      cat /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
                      cat /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties; \
                      terraform destroy --auto-approve
