--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -60,7 +60,7 @@ pipeline {
             steps {
                 catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
                     script{
-                      sh "cd ansible/ && ansible-playbook -i hosts.txt playbook_tomcat.yml"
+                      sh "sleep 300; cd ansible/ && ansible-playbook -i hosts.txt playbook_tomcat.yml; sleep 300"
                     }
                 }
             }
@@ -68,7 +68,15 @@ pipeline {
         stage('terraform destroy ') {
             steps {
                 script{
-                  sh "terraform destroy --auto-approve"
+                withCredentials([string(credentialsId: 'access_key', variable: 'access_key'),string(credentialsId: 'secret_key', variable: 'secret_key')]) {
+                   sh """
+                   export AWS_ACCESS_KEY_ID="\$access_key"; \
+                   export AWS_SECRET_ACCESS_KEY="\$secret_key"; \
+                   export AWS_DEFAULT_REGION="eu-north-1"; \
+                   terraform init; \
+                   terraform destroy --auto-approve
+                   """
+                  }
                 }
             }
         }
