--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@ front.url=http://localhost:8080/citizen/#
 front-end.url=http://localhost:8080/citizen/
 #db
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://terraform-20220603204527058700000001.cvapndh8rv2l.eu-north-1.rds.amazonaws.com:5432/ss_citizen
-db.username=postgres
-db.password=postgres
+db.url=jdbc:postgresql://localhost:5432/ss_citizen
+db.username=postusername
+db.password=postpassword
 #hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 hibernate.show_sql=true
 entity_manager.packages.to.scan=com.softserveinc.geocitizen.entity
 #liquibase
 driver=org.postgresql.Driver
-url=jdbc:postgresql://terraform-20220603204527058700000001.cvapndh8rv2l.eu-north-1.rds.amazonaws.com:5432/ss_citizen
+url=jdbc:postgresql://localhost:5432/ss_citizen
 username=postgres
 password=postgres
 changeLogFile=src/main/resources/liquibase/mainChangeLog.xml
