--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -3,11 +3,14 @@ pipeline {
     tools{
         terraform 'terraform'
     }
+    environment {
+        AWS_DEFAULT_REGION="eu-north-1"
+        THE_BUTLER_SAY_SO=credentials('aws-credentials')
+    }
     stages {
         stage('terraform apply ') {
             steps {
                 script{
-                  withCredentials([string(credentialsId: 'access_key', variable: 'access_key'),string(credentialsId: 'secret_key', variable: 'secret_key')]) {
                      sh """
                      pwd; \
                      export AWS_ACCESS_KEY_ID="\$access_key"; \
@@ -16,15 +19,13 @@ pipeline {
                      terraform init; \
                      terraform apply --auto-approve
                      """
-                    }
                 }
             }
         }
         stage('Take public IP, db url and all sed commands') {
             steps {
                 script{
-                  withCredentials([string(credentialsId: 'access_key', variable: 'ACCESS_KEY'), string(credentialsId: 'secret_key', variable: 'SECRET_KEY'), string(credentialsId: 'postgres_user_pass', variable: 'POSTGRES_USER_PASS'), string(credentialsId: 'email_password', variable: 'EMAIL_PASSWORD')]) {
-                     sh """
+                      sh """
                      export AWS_ACCESS_KEY_ID="\$ACCESS_KEY"; \
                      export AWS_SECRET_ACCESS_KEY="\$SECRET_KEY"; \
                      export AWS_DEFAULT_REGION="eu-north-1"; \
@@ -43,7 +44,6 @@ pipeline {
                      cat /var/lib/jenkins/workspace/Geocit/ansible/hosts.txt; \
                      cat /var/lib/jenkins/workspace/Geocit/src/main/resources/application.properties
                      """
-                    }
                 }
             }
         }
@@ -68,7 +68,6 @@ pipeline {
         stage('terraform destroy ') {
             steps {
                 script{
-                withCredentials([string(credentialsId: 'access_key', variable: 'access_key'),string(credentialsId: 'secret_key', variable: 'secret_key')]) {
                    sh """
                    sleep 300; \
                    export AWS_ACCESS_KEY_ID="\$access_key"; \
@@ -77,7 +76,6 @@ pipeline {
                    terraform init; \
                    terraform destroy --auto-approve
                    """
-                  }
                 }
             }
         }
